--- a/README.html
+++ b/README.html
@@ -77,7 +77,7 @@
     <body class="vscode-body vscode-light">
         <p><img src="file:////Users/binghuan/GitHub/MyCurrencyConverter/icon.png" alt=""></p>
 <h1 id="mycurrencyconverter">MyCurrencyConverter</h1>
-<p>================================================</p>
+<p>=================================</p>
 <p>A currency conversion app that allow a user to view a given amount in a given currency converted into other currencies.<br>
 (It's a coding challenge from PayPal)
 <a href="README/requirements.pdf">Here is the requirements for the home assignment.</a></p>
@@ -91,7 +91,7 @@
 <li><a href="#apis">APIs</a></li>
 <li><a href="#conversion-method">Conversion Method</a></li>
 <li><a href="#control-flow">Control Flow</a></li>
-<li><a href="#android-test-for-dao">Android Test for Dao</a></li>
+<li><a href="#test-cases">Test Cases</a></li>
 <li><a href="#illustration">Illustration</a></li>
 <li><a href="#demo">DEMO</a></li>
 </ul>
@@ -111,7 +111,12 @@
 <p><img src="file:////Users/binghuan/GitHub/MyCurrencyConverter/README/conversion_method.png" alt=""></p>
 <h2 id="control-flow">Control Flow</h2>
 <p><img src="file:////Users/binghuan/GitHub/MyCurrencyConverter/README/control_flow.png" alt=""></p>
-<h2 id="android-test-for-dao">Android Test for Dao</h2>
+<h2 id="test-cases">Test Cases</h2>
+<ul>
+<li>ExampleInstrumentedTest.kt</li>
+<li>OpenExchangeRateServiceTest.kt</li>
+<li>ExchangeRateDaoTest.kt</li>
+</ul>
 <p><img src="file:////Users/binghuan/GitHub/MyCurrencyConverter/README/android_test_for_dao.png" alt=""></p>
 <h2 id="illustration">Illustration</h2>
 <p><img src="file:////Users/binghuan/GitHub/MyCurrencyConverter/README/illustration.png" alt=""></p>
